--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./css/style.css">
 	<title>Document</title>
 </head>
 <body>
-	<select id="viloyat">
-		
-	</select>
-	<select id="obida">
-		
-	</select>
-	<button id="button">add...</button>
+	<div class="container">
+		<select id="viloyat">
+			
+		</select>
+		<select id="obida">
+			
+		</select>
+		<button id="button">add...</button>
 
-	<div id="divElement"></div>
+		<div id="divElement"></div>
+	</div>
 	<script src="./js/main.js"></script>
 </body>
 </html>
